Fix errorprone on java 17